@@ -136,6 +136,7 @@ New features:
 - When an item is identified, you will see its inventory index now.
 - openkore will now return a fatal error if an !include file is missing
   in config.txt.
+- Bot will now follow its master through warp portals.
 
 New commands:
 - getplayerinfo (number)
@@ -313,7 +314,7 @@ Credits:
 - illusionist: fix for force-aggressive monsters not being dropped when no LOS
 - clovanzo: Louyang portals
 - h4rry84: Auto Berserk/Preserve status support.
-
+- illusionist: Follow master through warp portal.
 
 ==================
 ### 1.6.3
